# ephemeride

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build.sh  lint.sh  setup.sh  test.sh  version.sh
api/: Cargo.toml
api/migrations/2024-02-24-155501_create_sessions/: up.sql
api/migrations/2024-02-24-155645_create_entries/: up.sql
api/migrations/2024-02-24-155908_create_entry_tags/: down.sql
api/src/: lib.rs  main.rs  schema.rs
api/src/api/v1/: index.rs  user.rs
backend/: Cargo.toml
backend/frisby/: jest.config.ts  package.json  tsconfig.json
backend/frisby/src/: api.spec.ts  env.ts
backend/frisby/src/util/: generateID.ts
backend/migrations/2024-02-24-150333_create_invites/: down.sql  up.sql
backend/migrations/2024-02-24-155227_create_users/: up.sql
backend/migrations/2024-02-24-155501_create_sessions/: up.sql
backend/migrations/2024-02-24-155543_create_tags/: down.sql  up.sql
backend/migrations/2024-02-24-155645_create_entries/: up.sql
backend/migrations/2024-02-24-155908_create_entry_tags/: down.sql  up.sql
backend/migrations/2025-10-08-073557-0000_create_categories/: up.sql
backend/migrations/2025-10-08-095521-0000_add_color_to_tags/: down.sql  up.sql
backend/migrations/2025-10-30-155212-0000_hard_delete_user/: down.sql  up.sql
backend/migrations/2025-10-30-171448-0000_change_date_type/: down.sql  up.sql
backend/migrations/2025-11-20-131813-0000_cascade_entry_tags/: down.sql  up.sql
backend/src/: error.rs  errors.rs  lib.rs  main.rs  schema.rs
backend/src/api/: index.rs  mod.rs
backend/src/api/v1/: auth.rs  category.rs  entries.rs  entry.rs  index.rs  metrics.rs  mod.rs  session.rs  sessions.rs  tag.rs  user.rs
backend/src/services/: auth.rs  category.rs  entry.rs  invite.rs  log.rs  mod.rs  pagination.rs  session.rs  tag.rs  user.rs
backend/src/util/: color.rs  error.rs  invite_code.rs  mod.rs  response.rs  unix_time.rs
backend/tests/: invite.rs  log.rs  user.rs
frontend/: .prettierignore  .prettierrc  eslint.config.ts  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts  vitest-setup-client.ts
yaak/: yaak.ev_pviY9YJbAi.yaml  yaak.fl_MutDAEV82K.yaml  yaak.fl_SzpuvioiT3.yaml  yaak.fl_d8b3aPxGc3.yaml  yaak.fl_s7uAHUrDvi.yaml  (+23 more)
(+154 files in other folders)
