[package]
name = "ephemeride-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "2.0.0", features = ["websocket", "static-files"] }
poem-openapi = "4.0.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
