[package]
name = "ephemeride-api"
version = "0.1.0"
edition = "2021"
default-run = "ephemeride-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.15.0"
diesel = { version = "2.1.4", features = ["postgres"] }
dotenvy = "0.15.7"
poem = { version = "2.0.0", features = ["websocket", "static-files"] }
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
validator = { version = "0.16.1", features = ["derive"] }

[dependencies.uuid]
version = "1.7.0"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
