[package]
name = "ephemeride-backend"
version = "0.1.0"
edition = "2021"
default-run = "ephemeride-backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.15.0"
chrono = { version = "0.4.42", features = ["serde"] }
diesel = { version = "2.3.3", features = ["chrono", "postgres"] }
dotenvy = "0.15.7"
poem = { version = "3.1.12", features = ["static-files"] }
regex = "1.12.2"
serde = "1.0.197"
serde_json = "1.0.114"
syn = "2.0.109"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.19"
validator = { version = "0.20.0", features = ["derive"] }

[dependencies.uuid]
version = "1.7.0"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
